src/app/pages/dialogs/dialogs.component.tns.css
/* Add mobile styles for the component here.  */
.dialog{
    width: 100%;
    border-color: grey;
    border-width: 8px;
    border-style: solid;
    border-radius: 50%;
    text-align: center;
    color: black;
    padding: 80px 0px;
    margin: 30px auto;
    font-size: 18px;
    font-weight: 900;
}

.dialog-score{
    color: black;
    font-size: 30;
    margin-top: 30;
}

.description{
    font-size: 18px;
    font-weight: 900;
    color:black;
}

.dialog-background {
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

